# Agentic-Ai-assignment-

./: README.md
Agentic-AI-main/Agentic-AI-main/01_uv/explore_uv/src/explore_uv/: hello.py
Agentic-AI-main/Agentic-AI-main/01_uv/uv_project2/: pyproject.toml
Agentic-AI-main/Agentic-AI-main/01_uv/uv_project2/src/uv_project2/: main.py
Agentic-AI-main/Agentic-AI-main/02_openrouter/openrouter-test/: pyproject.toml
Agentic-AI-main/Agentic-AI-main/02_openrouter/openrouter-test/src/openrouter_test/: __init__.py  main.py
Agentic-AI-main/Agentic-AI-main/03_litellm_openai_agent/01_litellm/: pyproject.toml
Agentic-AI-main/Agentic-AI-main/03_litellm_openai_agent/01_litellm/src/litellm_01/: hello.py
Agentic-AI-main/Agentic-AI-main/03_litellm_openai_agent/02_uv_litellm_chainlite/chatbot/: main.py
Agentic-AI-main/Agentic-AI-main/03_litellm_openai_agent/02_uv_litellm_chainlite/chinlit_chatbot/: pyproject.toml  requirements.txt
Agentic-AI-main/Agentic-AI-main/03_litellm_openai_agent/02_uv_litellm_chainlite/chinlit_chatbot/src/chinlit_chatbot/: __init__.py  chatbot.py
Agentic-AI-main/Agentic-AI-main/03_litellm_openai_agent/03_Litellm_agent_sdk/haiku_bot/: main.py  pyproject.toml
Agentic-AI-main/Agentic-AI-main/04_hello_agent/hello_agent/: pyproject.toml
Agentic-AI-main/Agentic-AI-main/04_hello_agent/hello_agent/src/hello_agent/: __init__.py  main.py
Agentic-AI-main/Agentic-AI-main/04_hello_agent/hello_agent2/hello_agent1/: main.py  pyproject.toml
Agentic-AI-main/Agentic-AI-main/05_chainlit/chainlit/: pyproject.toml
